@@ -14,6 +14,10 @@ getinfo - get header information from a RADIANCE file
 -
 .br
 .B getinfo
+.B -a
+.B "info_line1 .."
+.br
+.B getinfo
 .B -c
 .B "command .."
 .SH DESCRIPTION
@@ -48,6 +52,13 @@ and copies the body of the file from the standard
 input to the standard output.
 .PP
 The third form of
+.I "getinfo \-a"
+adds one or more header lines to the standard input.
+These lines are given as arguments to
+.I getinfo,
+and must be quoted if they contain spaces.
+.PP
+The fourth form of
 .I "getinfo \-c"
 is followed by a command and its arguments, which is executed
 on the data segment of the standard input.
